# esp32-test

./: .gitignore  Cargo.toml  README.md  flake.nix  shell.nix
.cargo/: config.toml
src/: main.rs
